src/objects/Lead_Retrieved__c.object
<CustomObject>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Assign_Date__c</fullName>
        <label>Lead Owner Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Leads_Retrieved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <label>New Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Leads_Retrieved</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <label>Owner ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <label>Owner Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>zLead Owner Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead_Owner_Assign_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Processed__c</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LR{00000000}</displayFormat>
        <label>Sequence No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads Retrieved</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>